--- a/src/Integration/Integration.csproj
+++ b/src/Integration/Integration.csproj
@@ -42,8 +42,8 @@
       <HintPath>..\..\Packages\Microsoft.IdentityModel.Clients.ActiveDirectory.2.20.301151232\lib\net45\Microsoft.IdentityModel.Clients.ActiveDirectory.WindowsForms.dll</HintPath>
       <Private>True</Private>
     </Reference>
-    <Reference Include="Newtonsoft.Json, Version=7.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
-      <HintPath>..\..\Packages\Newtonsoft.Json.7.0.1\lib\net45\Newtonsoft.Json.dll</HintPath>
+    <Reference Include="Newtonsoft.Json, Version=6.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+      <HintPath>..\..\packages\Newtonsoft.Json.6.0.8\lib\net45\Newtonsoft.Json.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="NuGet.VisualStudio, Version=3.3.0.167, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
@@ -110,14 +110,12 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Binding\BindCommand.cs" />
+    <Compile Include="Binding\IBindingOperation.cs" />
     <Compile Include="Binding\IRuleSetGenerationFileSystem.cs" />
+    <Compile Include="Binding\ISolutionRuleStore.cs" />
+    <Compile Include="Binding\ProjectBindingOperation.cs" />
     <Compile Include="Binding\RuleSetGroup.cs" />
-    <Compile Include="Binding\RuleSetInjection\ProjectRuleSetFileRetriever.cs" />
-    <Compile Include="Binding\RuleSetInjection\ProjectRuleSetHandler.cs" />
-    <Compile Include="Binding\RuleSetInjection\RuleSetHandlerBase.cs" />
-    <Compile Include="Binding\RuleSetInjection\RuleSetInjector.cs" />
-    <Compile Include="Binding\RuleSetInjection\SolutionRuleSetHandler.cs" />
-    <Compile Include="Binding\RuleSetInjection\SolutionRuleSetRetriever.cs" />
+    <Compile Include="Binding\SolutionBindingOperation.cs" />
     <Compile Include="Binding\NuGetHelper.cs" />
     <Compile Include="Binding\ProjectRuleSetWriter.cs" />
     <Compile Include="Binding\SolutionRuleSetWriter.cs" />
