--- a/src/TestInfrastructure/TestInfrastructure.csproj
+++ b/src/TestInfrastructure/TestInfrastructure.csproj
@@ -116,8 +116,10 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Framework\ConfigurableBindingOperation.cs" />
     <Compile Include="Framework\ConfigurableIntegrationSettings.cs" />
     <Compile Include="Framework\ConfigurableSettingsManager.cs" />
+    <Compile Include="Framework\ConfigurableSolutionBinder.cs" />
     <Compile Include="Framework\ConfigurableVsCommand.cs" />
     <Compile Include="Framework\ConfigurableComponentModel.cs" />
     <Compile Include="Framework\ConfigurableCompositionService.cs" />
